@@ -20,6 +20,7 @@ Revision history for Graphics-Primitive
   - Add 'pack' to the plan...
   - Path: modify line_to and move_to to accept scalars
   - Stroke: add dash_pattern
+  - Path: default starting point to 0,0
 
 0.06
   - Add Driver
